# nocs-diffusion

./: .gitignore  .gitmodules  ARCHIVED_visualizing_diffusion.py  Jenkinsfile  README.md  env.yml  learn_T.py  pyproject.toml  rts_diffusion.py  sandbox.ipynb  sandbox_datagen.ipynb  test_datagen.py  train.py  train_diffuser.py  train_huggingface.py  train_nocs_diffusion.py  train_pcd_vae.py  train_vae.py  train_vae_point_encoder.py  visualize_nocs_diffusion copy.py  visualize_pcd_vae.py  visualizing.py  visualizing_diffusion.py
cilo/: ARCHIVED_visualizing_diffusion.py  train.py  train_huggingface.py  visualizing.py  visualizing_2D_diffusion.py  visualizing_3D_diffusion.py  visualizing_diffusion.py
config/: base.yaml  depth_vae.yaml  diffuser.yaml  eval_depth_vae.yaml  eval_diffusion.yaml  logging.yaml  train_depth_vae.yaml  train_diffusion.yaml  train_nocs_diffuser.yaml  train_nocs_diffuser_new_dataloader.yaml  train_pcd_encoder.yaml
dataset/: __init__.py  dataloader.py  renderer.py  renderer_tools.py  shapenet.py  shapenet_renderer.py  shapnet_renderer.py
models/: __init__.py  diffusion.py  film_layer.py  nocs_diffusion.py  point_contextualized_2d_diffusion.py  pointnet.py  pose_diffusion.py  unets.py  vae.py
old/: rts_diffusion.py  rts_from_depth.py
scripts/: train_lin_cls_over_pcd_encoder.py  train_nocs_diffusion.py  train_pcd_encoder_using_diffusion.py  train_pcd_encoder_using_vae.py  train_pcd_vae.py  visualize_nocs_diffusion.py  visualize_pcd_vae.py
utils/: common.py  dataloader.py  datamanip.py  diffusion.py  nocs_generator.py  nocs_renderer.py  train.py  (+2 more)
(+141 files in other folders)
